project(vtu_usp_lab)

set (CMAKE_RUNTIME_OUTPUT_DIRECTORY "./bin")

add_executable(q1 src/q1.c)
add_executable(q2 src/q2.c)
add_executable(q3 src/q3.c)
add_executable(q4_writer src/q4_writer.c)
add_executable(q4_reader src/q4_reader.c)
add_executable(q5a src/q5a.c)
add_executable(q5b src/q5b.c)
add_executable(q6 src/q6.c)
add_executable(q7 src/q7.c)
add_executable(q11 src/q11.c)
